# gen/proto/go/patient/v1/patient.pb.validate.go
@@ -351,6 +351,8 @@ func (m *QueryRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
+	// no validation rules for SearchText
+
 	// no validation rules for GivenNames
 
 	// no validation rules for FamilyName
